--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">KotlinDemo</string>
 
-    <string name="title_content">Please Mark: ThePeople</string>
+    <string name="title_content">[] Mark: ThePeople测试成都市哈哈哈这是不适合觉得亟待解决的卡卡卡壳不是对你的狄安娜看卡卡吧卡卡卡看看卡卡卡卡卡会不会复活后哈哈哈哈哈哈不是合适哦了是v年历史</string>
     <string name="title_content_expand">Please Mark: The people people people people The people people people people.</string>
     <string name="title_submit">Submit</string>
     <string name="title_skip">Skip</string>
