--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     </string>
     <string name="the_end">THE END</string>
     <string name="the_end_sub">Footer 布局用于兼容特殊场景交互问题，高度须 match_parent。可重写 config 的 getFooterLayout 方法来替换自定义布局。</string>
+
+    <string name="first_free_chat">首次打招呼 即得一次免费聊</string>
+    <string name="activity_rule">活动规则</string>
 </resources>
