--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
 
     <string name="first_free_chat">首次打招呼 即得一次免费聊</string>
     <string name="activity_rule">活动规则</string>
+
+    <string name="home_key_word_title">以下是您为该职位添加的关键词</string>
+    <string name="home_key_word_content">修改后，可重新匹配相关人才</string>
+    <string name="home_key_word_edit">去修改</string>
 </resources>
